// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input renders correctly 1`] = `
<div>
  <div
    class="sc-beySPh fOhtuL"
  >
    <label
      aria-label="label"
      class="sc-dmyCSP enyBlq undefined-label"
      stile="default"
    >
      <h3
        class="sc-eDLKkx huaXkC undefined-heading"
        stile="default"
      />
      <input
        class="sc-guDLey fpCSGi undefined-input"
        stile="default"
      />
    </label>
  </div>
</div>
`;

exports[`Input renders on disabled 1`] = `
<div>
  <div
    class="sc-beySPh jyiaZj"
    disabled=""
  >
    <label
      aria-label="Input-label"
      class="sc-dmyCSP jRQXxX undefined-label"
      disabled=""
      stile="default"
    >
      <h3
        class="sc-eDLKkx huaXkC undefined-heading"
        disabled=""
        stile="default"
      >
        Input
      </h3>
      <input
        class="sc-guDLey fpCSGi undefined-input"
        disabled=""
        stile="default"
      />
    </label>
  </div>
</div>
`;

exports[`Input renders with each stile 1`] = `
<div>
  <div
    class="sc-beySPh fOhtuL"
  >
    <label
      aria-label="Input-label"
      class="sc-dmyCSP eBqJxY undefined-label"
      stile="mute"
    >
      <h3
        class="sc-eDLKkx dyNiMt undefined-heading"
        stile="mute"
      >
        Input
      </h3>
      <input
        class="sc-guDLey jofGtu undefined-input"
        stile="mute"
      />
    </label>
  </div>
</div>
`;

exports[`Input renders with each stile 2`] = `
<div>
  <div
    class="sc-beySPh fOhtuL"
  >
    <label
      aria-label="Input-label"
      class="sc-dmyCSP enyBlq undefined-label"
      stile="default"
    >
      <h3
        class="sc-eDLKkx huaXkC undefined-heading"
        stile="default"
      >
        Input
      </h3>
      <input
        class="sc-guDLey fpCSGi undefined-input"
        stile="default"
      />
    </label>
  </div>
</div>
`;

exports[`Input renders with each stile 3`] = `
<div>
  <div
    class="sc-beySPh fOhtuL primary"
  >
    <label
      aria-label="Input-label"
      class="sc-dmyCSP eBqJxY label undefined-label"
      stile="primary"
    >
      <h3
        class="sc-eDLKkx huaXkC heading undefined-heading"
        stile="primary"
      >
        Input
      </h3>
      <input
        class="sc-guDLey fpCSGi input undefined-input"
        stile="primary"
      />
    </label>
  </div>
</div>
`;

exports[`Input renders with error 1`] = `
<div>
  <div
    class="sc-beySPh fOhtuL"
    error="error"
  >
    <label
      aria-label="label"
      class="sc-dmyCSP enyBlq undefined-label"
      error="error"
      stile="default"
    >
      <h3
        class="sc-eDLKkx huaXkC undefined-heading"
        error="error"
        stile="default"
      />
      <input
        class="sc-guDLey fpCSGi error undefined-input"
        error="error"
        stile="default"
      />
    </label>
    <span
      class="sc-hLQSwg gpNhwr undefined-error-message"
    >
      error
    </span>
  </div>
</div>
`;
